tests/src/negative/wrongCntArgs.py
def f() -> int:
    return 0

f("2")
